Added feedback email

--- a/TODO
+++ b/TODO
@@ -1,2 +1,3 @@
 - [*]   change enroll procedure to avoid banned users to get in again
 - []    the little saturday feedbacks
+- []    preferences for the clinic (see: menu.blade.php)
